# database

./: .gitignore  README.md  app.py  appointment_queries.sql  data.sql  db_utils.py  invoice_queries.sql  main.py  pyproject.toml  schema.sql  specialization_queries.sql
database/: admin.sql  appointment_queries.sql  data.sql  doctor.sql  doctor_queries.sql  patient.sql  patient_queries.sql  record_queries.sql  schedule_queries.sql  schema.sql
pages/: admin.py  doctor.py  patient.py
